src/stylesheets/Projects.css
section#projects .project-grid {

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    gap: 1em;

    margin-top: 16px;

}

section#projects .project-grid .grid-item {
    
    background-color: var(--bg-tertiary);
    
    height: 300px;
    
    box-shadow: var(--box-shadow);
    
    border-radius: 8px;
    
    display: flex;
    flex-direction: column;
    
}

section#projects .project-grid .grid-item .content {

    flex-grow: 1;

    overflow: visible;

    padding: 8px;

    display: flex;
    flex-direction: column;

}

section#projects .project-grid .grid-item .content p {

    font-size: 1em;

}

section#projects .project-grid .grid-item .content .status {

    font-size: 0.75em;
    color: var(--font-secondary);
    margin-top: auto;

}

section#projects .project-grid .grid-item .content .status.active {
    
    color: var(--accent);
    font-weight: bold;
    
}
[data-theme="light"] section#projects .project-grid .grid-item .content .status.active {

    color: var(--font-default);
    font-weight: bold;

}

section#projects .project-grid .grid-item .options {
    
    display: flex;
    
    justify-content: space-between;
    
    padding: 8px;
    
}

section#projects .project-grid .grid-item .options .tags {
    
    display: flex;
    align-items: center;
    gap: 8px;
    flex-shrink: 0;
    
}

section#projects .project-grid .grid-item .options .tags > * {

    font-size: 0.75em;
    padding: 4px;
    background-color: var(--bg);
    border-radius: 4px;

}

section#projects .project-grid .grid-item .options button {
    
    border: none;
    background-color: var(--accent);
    
    padding: 8px;
    border-radius: 8px;
    color: black;
    cursor: pointer;
    transition: 100ms ease-in-out;
    
}

section#projects .project-grid .grid-item .options button:hover {
    
    background-color: var(--accent-shade);
    transition: 100ms ease-in-out;

}
    
section#projects .project-grid .grid-item .banner {

    height: 150px;
    flex-shrink: 0;
    background-size: cover;
    background-position: center;
    position: relative;

    padding: 8px 16px;

    display: flex;
    align-items: end;
    justify-content: start;
    
}

section#projects .project-grid .grid-item .banner h1 {
    z-index: 1;
    font-size: 1.5em;
    font-weight: normal;
    color: hsl(0, 0%, 95%); 
}

section#projects .project-grid .grid-item .banner::after {

    content: "";
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(to top, rgba(0,0,0,0.8), rgba(0,0,0,0));

}

@media (max-width: 768px) {

    section#projects .project-grid {

        grid-template-columns: 1fr;

    }

}

